yle-dl - download videos from Yle servers
Copyright 2009-2019 Antti Ajanki
Distributed under the GPL v3


Version <unreleased>

- Download audio streams with the original 192 kb/s bitrate

Version 20190331

- Most video streams are now saved in Matroska format by default.
  To revert to the earlier behavior, use --preferformat mp4
- Subtitle languages are correctly labeled (only in the Matroska format)
- Some streams were not downloaded at all
- Tabs and other odd whitespaces are replaces by space in generated filenames
- Fixed the series download which was broken by changes in Areena

Version 20190203

- Switch to using ffmpeg instead of wget by default
- Embed subtitles to the downloaded video file when possible
- Download either all subtitles (--sublang="all") or none (--sublang="none").
  It's no longer possible to download subtitles only for one language.
- Removed the --subtitlesonly option
- Display the output file name as part of the --showmetadata response
- Show a better error message if a failure might be caused by geo blocking

Version 20181221

- Fixed downloading of Areena audio streams
- Fixed support for some videos that are only available at a low resolution
- Include the series title in generated output file names
- Template for generated output file names: --output-template

Version 20181103

- yle-dl will use date-based version numbers from now on
- Support for new Areena radio streams
- More robust parsing for Elävä Arkisto
- To run tests that only succeed on a Finnish IP, set ENABLE_FINLAND_TESTS=1

21 Oct 2018, Version 2.37

- Fixed live radio stream downloading
- Use --proxy for all metadata calls
- Stop claiming that SOCKS5 proxies are supported

31 Aug 2018, Version 2.36

- Some streams previously failed because their type was misdetected
- More consistent title formatting

8 Aug 2018, version 2.35

- Improved support for European Athletics Championships streams
- Download the HLS variant of the live TV streams by default (same as the