@@ -247,12 +247,11 @@ class DeliveryProfile(object):
         manifest_url = self.manifest_url(entry_id, partner_id,
                                          client_tag, referrer)
 
-        if media_type == 'video':
+        if self.stream_format == 'url':
+            backends.append(WgetBackend(manifest_url, file_ext))
+        elif media_type == 'video':
             backends.append(HLSBackend(manifest_url))
         else:
             backends.append(HLSAudioBackend(manifest_url))
-
-        if self.stream_format == 'url':
-            backends.append(WgetBackend(manifest_url, file_ext))
 
         return backends
