@@ -6,6 +6,7 @@ Distributed under the GPL v3
 Version <unreleased>
 
 - Download audio streams with the original 192 kb/s bitrate
+- Fixed a bug that caused yle-dl to randomly download a stream without subtitles
 
 Version 20190331
 
